Fixed the image cutoff on cards, background white

--- a/frontend/adopt.css
+++ b/frontend/adopt.css
@@ -15,10 +15,11 @@ p {
 }
 
 img {
+    background-color: white;
     border-radius: 10px;
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 .flip-card {
